Native config for GraalVM

--- a/quarkus/samconfig.toml
+++ b/quarkus/samconfig.toml
@@ -12,3 +12,14 @@ confirm_changeset = false
 capabilities = "CAPABILITY_IAM"
 disable_rollback = true
 image_repositories = []
+
+[native.deploy.parameters]
+stack_name = "quarkus-native-serverless"
+s3_bucket = "aws-sam-cli-managed-default-samclisourcebucket-18ed0j5xol14m"
+s3_prefix = "quarkus-native-serverless"
+region = "eu-central-1"
+confirm_changeset = false
+capabilities = "CAPABILITY_IAM"
+disable_rollback = true
+image_repositories = []
+
